--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Я впервые разместила свой код на удаленном репозитории</h1>
     <h2>Hello world!!</h2>
+    <p>изменения, которые позже удалим</p>
 </body>
 </html>
